--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -91,7 +91,7 @@ h1 {
 	font-family: CircularBook;
 	font-weight: bold;
 	display: block;
-	@media screen and (max-width: 999px) {
+	@media screen and (max-width : 999px) {
 		font-size: 32px;
 		line-height: 38px;
 	}
@@ -209,7 +209,7 @@ main {
 		height: auto;
 	}
 	br {
-		display: none;
+		//display: none;
 	}
 }
 
